--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Cascadia%20Code"
+      as="style"
+      onload="this.rel = 'stylesheet'"
+    />
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css?family=Fira%20Code"
+      as="style"
+      onload="this.rel = 'stylesheet'"
+    />
+
+    <link href="/src/style.css" rel="stylesheet" />
+    <title>DiffTool</title>
   </head>
   <body>
     <div id="app"></div>
