--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
     <title>DiffTool</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" />
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
